[package]
name = "mirakc"
version = "0.16.1"
authors = ["Contributors of mirakc"]
description = "A Mirakurun-compatible PVR backend written in Rust"
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
cron = "0.8.0"
failure = "0.1.8"
futures = "0.3.13"
humantime = "2.1.0"
indexmap = { version = "1.6.1", features = ["serde-1"] }
libc = "0.2.86"
log = "0.4.14"
mio = "0.6.22"
mustache = "0.9.0"
num_cpus = "1.13.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_json = { version = "1.0.62", features = ["preserve_order"] }
serde_yaml = "0.8.17"
serde_qs = "0.8.2"
shell-words = "1.0.0"
tokio = { version = "0.2.23", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.16"

[dev-dependencies]
actix-http = "2.2.0"
assert_matches = "1.5.0"

[profile.release]
lto = true
