[package]
name = "actlet-derive"
version = "0.0.0"
authors = ["Contributors of mirakc"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.76", features = ["extra-traits"] }

[dev-dependencies]
actlet = { path = "../actlet" }
static_assertions = "1.1.0"
