[package]
name = "actlet-derive"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["extra-traits"] }

[dev-dependencies]
actlet = { path = "../actlet" }
static_assertions = "1.1.0"
