[package]
name = "actlet"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["derive"]
derive = ["actlet-derive"]

[dependencies]
actlet-derive = { path = "../actlet-derive", optional = true }
async-trait = "0.1.89"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
