[package]
name = "actlet"
version = "0.0.0"
authors = ["Contributors of mirakc"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["derive"]
derive = ["actlet-derive"]

[dependencies]
actlet-derive = { path = "../actlet-derive", optional = true }
async-trait = "0.1.91"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["full"] }
tokio-util = "0.7.19"
tracing = "0.1.44"
