[package]
name = "axum-extract"
version = "0.0.0"
authors = ["Contributors of mirakc"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
axum-extra = "0.12.5"
axum-core = "0.5.6"
http = "1.4.0"

[dev-dependencies]
axum = { version = "0.8.8", features = ["__private"] }
axum-macros = { version = "0.5.0", features = ["__private"] }
tokio = { version = "1.48.0", features = ["full"] }
