[package]
name = "axum-extract"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum-extra = "0.12.6"
axum-core = "0.5.6"
http = "1.4.2"

[dev-dependencies]
axum = { version = "0.8.9", features = ["__private"] }
axum-macros = { version = "0.5.1", features = ["__private"] }
tokio = { version = "1.52.3", features = ["full"] }
