[package]
name = "axum-test-helper"
version = "1.1.0-dev.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
axum = "0.6.0-rc.4"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "stream", "multipart"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = "1.21.2"
tower = { version = "0.4.13", default-features = false, features = ["make"] }
tower-service = "0.3.2"
