[package]
name = "axum-test-helper"
version = "2.0.0-dev.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
axum = "0.6.1"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "stream", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.24.0"
tower = { version = "0.4.13", default-features = false, features = ["make"] }
tower-service = "0.3.2"
