[package]
name = "chrono-jst"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
