[package]
name = "mirakc-core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
actlet = { path = "../actlet" }
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["http2"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
bytes = "1.11.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
chrono-jst = { path = "../chrono-jst" }
cron = "0.15.0"
futures = "0.3.31"
glob = "0.3.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
humantime = "2.3.0"
humantime-serde = "1.1.1"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1"
indexmap = { version = "2.12.1", features = ["serde"] }
is-terminal = "0.4.17"
itertools = "0.14.0"
libc = "0.2.177"
maplit = "1.0.2"
mime = "0.3.17"
mustache = "0.9.0"
path-dedot = "3.1.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_norway = "0.9.42"
serde_qs = "0.15.0"
shell-words = "1.1.0"
smallstr = { version = "0.3.1", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util", "time"] }
tokio-util = { version = "0.7.17", features = ["codec", "io"] }
toml = "0.9.8"
tower = { version = "0.5.2", default-features = false, features = ["util", "make"] }
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.7", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.14.0"
paste = "1.0.15"
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"
tempfile = "3.23.0"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
