[package]
name = "mirakc-core"
version = "3.4.54"
authors = ["Contributors of mirakc"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
actlet = { path = "../actlet" }
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["http2"] }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
axum-extract = { path = "../axum-extract" }
bytes = "1.11.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde"] }
chrono-jst = { path = "../chrono-jst" }
cron = "0.15.0"
futures = "0.3.31"
glob = "0.3.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
humantime = "2.3.0"
humantime-serde = "1.1.1"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1"
indexmap = { version = "2.13.0", features = ["serde"] }
is-terminal = "0.4.17"
itertools = "0.14.0"
libc = "0.2.180"
maplit = "1.0.2"
mime = "0.3.17"
mustache = "0.9.0"
once_cell = "1.21.3"
path-dedot = "3.1.1"
reqwest = { version = "0.13.1", default-features = false, features = ["json"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_norway = "0.9.42"
serde_qs = "1.0.0"
shell-words = "1.1.1"
smallstr = { version = "0.3.1", features = ["serde"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
toml = "0.9.11"
tower = { version = "0.5.3", default-features = false, features = ["util", "make"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.8", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.14.0"
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"
tempfile = "3.24.0"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
