[package]
name = "mirakc-timeshift-fs"
version = "3.4.57"
authors = ["Contributors of mirakc"]
description = "A userspace filesystem to expose timeshift records as files"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
indexmap = { version = "2.13.0", features = ["serde"] }
libc = "0.2.182"
mirakc-core = { path = "../mirakc-core" }
sanitize-filename = "0.6.0"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing = "0.1.44"

[dev-dependencies]
assert_matches = "1.5.0"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = ["build"] }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.16.0", features = ["abi-7-31"] }

[target.'cfg(target_os = "macos")'.dependencies]
# NOTE: Enable the default features of the `fuser` crate.  Because the `fuser` crate always
# requires libfuse* for the macos target.
fuser = { version = "0.16.0", features = ["libfuse", "abi-7-31"] }
