[package]
name = "mirakc-timeshift-fs"
description = "A userspace filesystem to expose timeshift records as files"
build = "build.rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.4", features = ["derive", "env"] }
indexmap = { version = "2.14.0", features = ["serde"] }
libc = "0.2.189"
mirakc-core = { path = "../mirakc-core" }
sanitize-filename = "0.6.0"
serde_json = { version = "1.0.151", features = ["preserve_order"] }
tracing = "0.1.44"

[dev-dependencies]
assert_matches = "1.5.0"
test-log = { version = "0.2.21", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[build-dependencies]
vergen-gitcl = { version = "10.0.1", features = ["build"] }

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.18.0"

[target.'cfg(target_os = "macos")'.dependencies]
# NOTE: Enable the default features of the `fuser` crate.  Because the `fuser` crate always
# requires libfuse* for the macos target.
fuser = { version = "0.18.0", features = ["libfuse"] }
