[package]
name = "mirakc"
description = "A Mirakurun-compatible PVR backend written in Rust"
build = "build.rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
actlet = { path = "../actlet" }
clap = { version = "4.5.53", features = ["derive", "env"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
humantime = "2.3.0"
mirakc-core = { path = "../mirakc-core" }
semver = "1.0.27"
serde_json = { version = "1.0.146", features = ["preserve_order"] }
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = ["build"] }

[dev-dependencies]
assert_matches = "1.5.0"
serde_norway = "0.9.42"
test-log = { version = "0.2.19", default-features = false, features = ["trace"] }
